syntax = "proto3";

package grpc.qhat.user;

import "google/protobuf/struct.proto";

message UserProto {
  int64 id = 1;
  string email = 2;
  string userName = 3;
}

message CreateRequest {
  UserProto user = 1;
  string password = 2;
}

message CreateResponse {
  UserProto user = 1;
}